Stable versions
---------------

4.4.1 ():
	- fix MacOS Tiger build issues (reported by Misty De Meo)
	- fix sample loop corner case (reported by knight-ryu12)
	- fix MDL c5spd to preserve base periods (reported by Saga Musix)
	- fix anticlick when rendering only one sample
	- fix anticlick in His Master's Noise instruments
	- fix anticlick in MED synth instruments

4.4.0 (20160719):
	Fix bugs caught in the OpenMPT test cases:
	- fix XM arpeggio in FastTracker 2 compatible mode
	- fix IT bidirectional loop sample length
	- fix MOD vibrato and tremolo in Protracker compatible mode
	Fix multichannel MOD issues reported by Leilei:
	- fix XM replayer note delay and retrig quirk
	- fix XM replayer channel pan
	- fix MOD loader period to note conversion
	Fix issues reported by Lionel Debroux:
	- fix virtual channel deallocation error handling
	- fix S3M global volume effect
	- fix IT envelope reset on tone portamento
	- fix IT voice leak caused by disabled envelope
	- fix IT volume column tone portamento
	- fix XM envelope position setting
	- fix FT2 arpeggio+portamento quirk with finetunes
	- fix mixer anticlick routines
	- accept S3M modules with invalid effects
	Fix issues reported by Saga Musix:
	- fix 669 effects when no instrument number is specified
	- fix 669 effects to be frequency-based
	- fix 669 initial tempo
	Other changes:
	- fix S3M channel reset on sample end (reported by Alexander Null)
	- fix Noisetracker MOD speed setting (reported by Tero Auvinen)
	- fix IT loader DCA sanity check (reported by Paul Gomez Givera)
	- fix IT envelope reset after offset with portamento
	- fix bidirectional sample interpolation
	- fix mixer resampling and tuning issues
	- add Antti Lankila's Amiga 500 modeling mixer
	- add support to filter effect E0 in Amiga mods
	- add flags to configure player mode
	- add option to set the maximum number of virtual channels
	- add frequency-based "period" mode
	- add support to IT sample sustain loop